# vk-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  gpu.yml  integration.yml  mdbook.yml  rust-clippy.yml  rust.yml
benches/: image_swap_access.rs  submission_reorder.rs
book/: book.toml
book/src/: pipeline_graphic_vertex.md  pipeline_push_const.md  resource_accel_struct.md
contrib/: README.md
contrib/rel-mgmt/: check  run-all-examples
contrib/vk-graph-egui/: Cargo.toml  README.md
contrib/vk-graph-egui/src/: lib.rs
contrib/vk-graph-fx/: Cargo.toml  README.md
contrib/vk-graph-fx/src/: bitmap_font.rs  image_loader.rs  lib.rs  presenter.rs  transition.rs
contrib/vk-graph-hot/: Cargo.toml  README.md
contrib/vk-graph-hot/examples/: glsl.rs  hlsl.rs
contrib/vk-graph-hot/src/: compute.rs  graphic.rs  lib.rs  ray_trace.rs  shader.rs
contrib/vk-graph-imgui/: Cargo.toml
contrib/vk-graph-imgui/src/: lib.rs
contrib/vk-graph-prelude/: Cargo.toml
contrib/vk-graph-prelude/src/: lib.rs
contrib/vk-graph-window/: Cargo.toml
contrib/vk-graph-window/examples/: hello_world.rs
contrib/vk-graph-window/src/: frame.rs  lib.rs  swapchain.rs
crates/: README.md
crates/vk-graph-egui/: CHANGELOG.md  Cargo.toml  README.md
crates/vk-graph-egui/shaders/: egui.vert
crates/vk-graph-egui/src/: lib.rs
crates/vk-graph-fx/: Cargo.toml  README.md
crates/vk-graph-fx/res/shader/graphics/: font.frag  font.vert
crates/vk-graph-fx/res/shader/inc/: catmull_rom.glsl
crates/vk-graph-fx/src/: bitmap_font.rs  image_loader.rs  lib.rs  presenter.rs  transition.rs
crates/vk-graph-hot/: Cargo.toml  README.md
crates/vk-graph-hot/examples/: README.md  glsl.rs  hlsl.rs
crates/vk-graph-hot/examples/res/: fill_image.comp  fill_image.hlsl  plasma.glsl  plasma.hlsl
crates/vk-graph-hot/src/: compute.rs  graphic.rs  graphics.rs  lib.rs  ray_trace.rs  ray_tracing.rs  shader.rs
crates/vk-graph-imgui/: CHANGELOG.md  Cargo.toml  README.md
crates/vk-graph-imgui/src/: lib.rs
crates/vk-graph-prelude/: README.md
crates/vk-graph-prelude/src/: lib.rs
crates/vk-graph-window/: CHANGELOG.md  Cargo.toml  README.md
crates/vk-graph-window/examples/: hello_world.rs
crates/vk-graph-window/src/: frame.rs  graphchain.rs  lib.rs  swapchain.rs
docs/: consolidated-notes.md
examples/: README.md  aliasing.rs  app.rs  baked.rs  bindless.rs  cpu_readback.rs  debugger.rs  egui.rs  font_bmp.rs  fuzzer.rs  getting-started.md  image_sampler.rs  imgui.rs  min_max.rs  mip_compute.rs  mip_graphic.rs  mip_graphics.rs  msaa.rs  multipass.rs  multithread.rs  ray_omni.rs  ray_trace.rs  ray_tracing.rs  rt_triangle.rs  subgroup_ops.rs  transitions.rs  triangle.rs  vertex_layout.rs  vsm_omni.rs
examples/profile_with_puffin/: mod.rs
examples/shader-toy/: Cargo.toml  README.md  build.rs
examples/shader-toy/src/: main.rs
examples/skeletal-anim/: Cargo.toml  README.md  build.rs
examples/skeletal-anim/res/animated_characters_3/: character_medium.toml  human_male.toml  idle.toml  run.toml
examples/skeletal-anim/src/: main.rs
examples/vr/: Cargo.toml  README.md
examples/vr/src/: main.rs
examples/vr/src/driver/: instance.rs  mod.rs  swapchain.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: submission_schedule.rs
guide/: Cargo.toml  book.toml  doctest.rs
guide/guide-helper/: Cargo.toml  README.md
guide/guide-helper/src/: lib.rs  main.rs
guide/src/: README.md  SUMMARY.md  cmd.md  cmd_compute.md  cmd_graphic.md  cmd_ray_trace.md  install.md  pipeline.md  pipeline_compute_dispatch.md  pipeline_graphic_draw.md  pipeline_hot_reload.md  pipeline_push_const.md  pipeline_ray_trace.md  pipeline_spec.md  pipeline_sync.md  resource.md  resource_accel_struct.md  resource_buffer.md  resource_image.md  usage.md  usage_debugging.md  usage_device.md  usage_moltenvk.md  usage_shader.md  usage_thread.md  usage_window.md
res/graph-fixture/: graph-1783212230368.md  graph-1783212245365.md
src/: bind.rs  display.rs  edge.rs  fixture.rs  info.rs  lazy_str.rs  lib.rs  mod.rs  node.rs  pass_ref.rs  queue.rs  resolver.rs  resource.rs  stream.rs  submission.rs  swapchain.rs
src/cmd/: bind.rs  cmd_buf.rs  cmd_ref.rs  compute.rs  graphic.rs  graphics.rs  mod.rs  pipeline.rs  ray_trace.rs  ray_tracing.rs
src/cmd_ref/: accel.rs  accel_struct.rs  bind.rs  cmd_buf.rs  compute.rs  graphic.rs  mod.rs  pipeline.rs  ray_trace.rs  view.rs
src/driver/: accel_struct.rs  buffer.rs  cmd_buf.rs  compute.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  fence.rs  graphic.rs  graphics.rs  image.rs  instance.rs  mod.rs  physical_device.rs  query_pool.rs  ray_trace.rs  ray_tracing.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs
src/graph/: mod.rs  pass_ref.rs
src/pool/: alias.rs  cache.rs  fifo.rs  garbage_collector.rs  hash.rs  lazy.rs  mod.rs
tests/: gpu_smoke.rs  integration.rs  vulkan.rs
