[workspace]
resolver = "3"
members = [
    "crates/vk-graph-egui",
    "crates/vk-graph-fx",
    "crates/vk-graph-hot",
    "crates/vk-graph-imgui",
    "crates/vk-graph-window",
    "examples/shader-toy",
    "examples/skeletal-anim",
    "examples/vr",
    "guide",
    "guide/guide-helper"
]

[workspace.package]
rust-version = "1.94"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/attackgoat/vk-graph"
readme = "README.md"

[workspace.dependencies]
log = "0.4"
profiling = "1.0"
vk-graph.path = ""
vk-graph-egui.path = "crates/vk-graph-egui"
vk-graph-fx.path = "crates/vk-graph-fx"
vk-graph-hot.path = "crates/vk-graph-hot"
vk-graph-imgui.path = "crates/vk-graph-imgui"
vk-graph-window.path = "crates/vk-graph-window"
winit = "0.30"

[package]
name = "vk-graph"
version = "0.14.0+alpha"
authors = ["John Wells <john@attackgoat.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://github.com/attackgoat/vk-graph"
documentation = "https://docs.rs/vk-graph"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "A high-performance Vulkan driver with automatic resource management and execution."

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies]
ash = "0.38.0"
ash-window = "0.13"
derive_builder = "0.20"
gpu-allocator = "0.28"
log.workspace = true
ordered-float = "5.1"
parking_lot = { version = "0.12", optional = true }
paste = "1.0"
profiling.workspace = true
raw-window-handle = "0.6"
readonly = "0.2"
spirq = "1.2"
vk-sync = { version = "0.5", package = "vk-sync-fork" } # // SEE: https://github.com/gwihlidal/vk-sync-rs/pull/4 -> https://github.com/expenses/vk-sync-rs

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = "0.20"

[dev-dependencies]
anyhow = "1.0"
bmfont = { version = "0.3", default-features = false }
bytemuck = "1.25"
clap = { version = "4.5", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
half = { version = "2.4", features = ["bytemuck"] }
hassle-rs = "0.11"
image = "0.25"
log = "0.4"
meshopt = "0.2"
polyhedron-ops = ">=0.2, <=0.2.4"
pretty_env_logger = "0.5"
puffin = "0.19"
puffin_http = "0.16"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
vk-graph-fx.workspace = true
vk-graph-imgui.workspace = true
vk-graph-egui.workspace = true
vk-graph-window.workspace = true
vk-shader-macros = "0.2"
tobj = "4.0"
winit.workspace = true
winit_input_helper = { git = "https://github.com/stefnotch/winit_input_helper.git", rev = "6e76a79d01ce836c01b9cdeaa98846a6f0955dc4" } #"0.16"
