[package]
name = "vk-graph-window"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4"
profiling = "1.0"
vk-graph = { path = "../.." }
winit = "0.30"

[dev-dependencies]
pretty_env_logger = "0.5"
