[package]
name = "vk-graph-fx"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/vk-graph"
homepage = "https://github.com/attackgoat/vk-graph/crates/vk-graph-fx"
documentation = "https://docs.rs/vk-graph"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "A bunch of pre-built utilities that are helpful when using vk-graph"

[features]
default = [
    "blend-modes",
    "mask-modes",
    "matte-modes",
]
blend-modes = []
mask-modes = []
matte-modes = []

[dependencies]
bmfont = { version = "0.3", default-features = false }
bytemuck = "1.14"
parking_lot = "0.12"
log = "0.4"
anyhow = "1.0"
glam = "0.27"
vk-graph-prelude = { path = "../vk-graph-prelude" }
vk-shader-macros = "0.2"
