[package]
name = "vk-graph-imgui"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bytemuck = "1.25"
imgui = "0.12"
imgui-winit-support = "0.13"
vk-graph.workspace = true
vk-shader-macros = "0.2"
