[package]
name = "vk-graph-window"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
derive_builder = "0.20"
log.workspace = true
profiling.workspace = true
vk-graph.workspace = true
winit.workspace = true

[dev-dependencies]
pretty_env_logger = "0.5"
