[package]
name = "shader-toy"
authors = ["John Wells <john@attackgoat.com>"]
description = "Example API usage"
edition.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[features]
default = ["include-pak"]
include-pak = []

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.6", features = ["derive"] }
pak = "0.7"
pretty_env_logger = "0.5"
vk-graph.workspace = true
vk-graph-fx.workspace = true
vk-graph-window.workspace = true
winit.workspace = true

[build-dependencies]
anyhow = "1.0"
pak = { version = "0.7", features = ["bake"] }
paste = "1.0"
shader-prepper = "0.3.0-pre.3"  
shaderc = "0.10"
