[package]
name = "animation"
authors = ["John Wells <john@attackgoat.com>"]
edition.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
pak = "=0.5.0"
pretty_env_logger = "0.5"
vk-graph.workspace = true
vk-graph-window.workspace = true

[build-dependencies]
anyhow = "1.0"
log.workspace = true
pak = { version = "=0.5.0", features = ["bake"] }
shaderc = "0.10"
simplelog = "0.12"
