[package]
name = "vr"
authors = ["John Wells <john@attackgoat.com>"]
edition.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[features]
default = ["loaded"]
loaded = ["openxr/loaded", "vk-graph/loaded"]
linked = ["openxr/linked", "vk-graph/linked"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
ctrlc = "3.4"
glam = { version = "0.32", features = ["bytemuck", "mint"] }
image = "0.25"
log.workspace = true
meshopt = "0.6"
mikktspace = { version = "1.0", package = "bevy_mikktspace" }
mint = "0.5"
openxr = { version = "0.21", default-features = false, features = ["mint"] }
pretty_env_logger = "0.5"
vk-graph.workspace = true
vk-graph-hot.workspace = true
tobj = "4.0"
